# traffic-monitor

./: .gitignore  AGENTS.md  Cargo.toml  README.md  VERSIONING.md  build.rs  installer.iss  package.json  tsconfig.json
.github/workflows/: release.yml
docs/: IMPLEMENTATION.md  RESEARCH.md  ai-review-guidelines.md  layered-window-pitfalls.md  text-computer.md  unsafe-code-policy.md
docs/bugs/: audit.md  audit_202606.md  bug.md
docs/reference/: how-to-get-battery.md
docs/rfc/: 0001-network-filtering.md  0003-modern-standby-network-backoff.md  0004-performance-and-resource-optimization.md  0005-code-quality-robustness-ux.md  0006-auto-update.md  001-direct2d-rendering.md  002-network-interface-filtering.md  003-network-interface-filtering-reconsideration.md
scripts/: package.ts  release.ts
src/: collector.rs  config.rs  ffi_guard.rs  main.rs  mouse_hid.rs  renderer.rs  thermal.rs  tray.rs  update.rs  util.rs
