[package]
name = "traffic-monitor"
version = "0.4.1"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_Power",
    "Win32_System_LibraryLoader",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_UI_Input",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_System_RemoteDesktop",
]}
hidapi = "2.6"

[build-dependencies]
winresource = "0.1"
